fixed overflow scroll

--- a/packages/client/src/App.scss
+++ b/packages/client/src/App.scss
@@ -6,7 +6,6 @@
 .chat-container {
   margin: 0 auto;
   color: black;
-
   width: 500px;
   padding: 10px;
 }
@@ -15,11 +14,11 @@
   color: black;
   border-style: solid;
   padding: 10px;
-  height: 450px;
-  overflow: scroll;
-  display: flex;
+ height: 450px;
+  overflow-y: scroll;
+ /*  display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-end; */
   .message-bubble {
     background-color: rgb(0, 132, 255);
     border-radius: 10px;
